--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,48 @@
 <!-- src/index.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sakura Hochegger</title>
+  <!-- Google Fonts: Montserrat -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <!-- Compiled Tailwind CSS -->
   <link href="../build/styles.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
-  <div class="bg-white p-8 rounded shadow-md">
-    <h1 class="text-2xl font-bold mb-4">Sakura Hochegger</h1>
-    <p class="text-gray-700">Artist</p>
-  </div>
+
+<body class="bg-full-background bg-cover bg-center bg-no-repeat min-h-screen flex flex-col items-end p-8">
+
+  <!-- Main Heading -->
+  <h1 class="font-heading font-bold 
+             text-4xl sm:text-5xl md:text-6xl lg:text-7xl 
+             text-white 
+             mb-8 
+             shadow-lg 
+             transition-transform duration-500 hover:scale-105">
+    <a href="index.html" class="text-white hover:text-gray-300 cursor-pointer transition-colors duration-300" aria-label="Back to Home">
+      Sakura Hochegger
+    </a>
+  </h1>
+  
+  <!-- Navigation Links Container -->
+  <nav class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-6 mt-8">
+    <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
+      <a href="gallery.html" class="cursor-pointer">Gallery</a>
+    </h3>
+    <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
+      <a href="about.html" class="cursor-pointer">About</a>
+    </h3>
+    <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
+      <a href="blog.html" class="cursor-pointer">Blog</a>
+    </h3>
+    <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
+      <a href="contact.html" class="cursor-pointer">Contact</a>
+    </h3>
+  </nav>
+
 </body>
+
 </html>
