--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   <!-- Main Heading -->
   <h1 class="font-heading font-bold 
-             text-4xl sm:text-5xl md:text-6xl lg:text-7xl 
+             text-3xl sm:text-4xl md:text-5xl lg:text-6xl 
              text-white 
              mb-8 
              shadow-lg 
@@ -30,7 +30,7 @@
   <!-- Navigation Links Container -->
   <nav class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-6 mt-8">
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
-      <a href="gallery.html" class="cursor-pointer">Gallery</a>
+      <a href="pictures.html" class="cursor-pointer">Pictures</a>
     </h3>
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
       <a href="about.html" class="cursor-pointer">About</a>
