cv.html and contact.html added

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <a href="about.html" class="cursor-pointer">About</a>
     </h3>
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
-      <a href="blog.html" class="cursor-pointer">Blog</a>
+      <a href="cv.html" class="cursor-pointer">CV</a>
     </h3>
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
       <a href="contact.html" class="cursor-pointer">Contact</a>
