--- a/src/pictures.html
+++ b/src/pictures.html
@@ -34,9 +34,8 @@
         <div class="w-full flex flex-col items-center">
             <!-- Letting go, y and I -->
             <div class="mt-12 w-3/4 flex flex-col items-end">
-                <img src="../assets/images/pictures/1. Sakura Hochegger 'Letting go, y and I'.jpg" 
-                     alt="Letting go, y and I" 
-                     class="w-full h-auto">
+                <img src="../assets/images/pictures/1. Sakura Hochegger 'Letting go, y and I'.jpg"
+                    alt="Letting go, y and I" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
                     Letting go, y and I
                 </h3>
@@ -44,12 +43,21 @@
                     Oil and pigment on linen, 240 x 160cm
                 </p>
             </div>
-
+            <!-- Childhood fear -->
+            <div class="mt-12 w-1/2 flex flex-col items-end">
+                <img src="../assets/images/pictures/2. childhood_fear.jpg" alt="Childhood fear"
+                    class="w-full h-auto">
+                <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
+                    Childhood fear
+                </h3>
+                <p class="text-gray-700 text-base font-normal text-right">
+                    Oil and pigment on linen, 240 x 160cm
+                </p>
+            </div>
             <!-- Paintings on paper -->
             <div class="mt-12 w-3/4 flex flex-col items-end">
-                <img src="../assets/images/pictures/2. Sakura Hochegger 'Paintings on paper'.jpg" 
-                     alt="Paintings on paper" 
-                     class="w-full h-auto">
+                <img src="../assets/images/pictures/2. Sakura Hochegger 'Paintings on paper'.jpg"
+                    alt="Paintings on paper" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
                     Paintings on paper
                 </h3>
@@ -60,11 +68,83 @@
 
             <!-- No title -->
             <div class="mt-12 w-1/2 flex flex-col items-end">
-                <img src="../assets/images/pictures/3. Sakura Hochegger 'No title'.jpg" 
-                     alt="No title" 
-                     class="w-full h-auto">
+                <img src="../assets/images/pictures/3. Sakura Hochegger 'No title'.jpg" alt="No title"
+                    class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
                     No title
+                </h3>
+                <p class="text-gray-700 text-base font-normal text-right">
+                    Oil and pigment on linen, 240 x 160cm
+                </p>
+            </div>
+            <!-- Favourite 3 -->
+            <div class="mt-12 w-1/2 flex flex-col items-end">
+                <img src="../assets/images/pictures/4. Sakura Hochegger 'Favourite 3'.jpg" alt="Favourite 3"
+                    class="w-full h-auto">
+                <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
+                    Favourite 3
+                </h3>
+                <p class="text-gray-700 text-base font-normal text-right">
+                    Oil and pigment on linen, 240 x 160cm
+                </p>
+            </div>
+            <!-- OMG it's... -->
+            <div class="mt-12 w-1/2 flex flex-col items-end">
+                <img src="../assets/images/pictures/5. Sakura Hochegger 'OMG it's...'.jpg" alt="OMG it's..."
+                    class="w-full h-auto">
+                <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
+                    OMG it's...
+                </h3>
+                <p class="text-gray-700 text-base font-normal text-right">
+                    Oil and pigment on linen, 240 x 160cm
+                </p>
+            </div>
+            <!-- 3 of us -->
+            <div class="mt-12 w-1/2 flex flex-col items-end">
+                <img src="../assets/images/pictures/6. 三 of us .jpg" alt="3 of us" class="w-full h-auto">
+                <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
+                    3 of us
+                </h3>
+                <p class="text-gray-700 text-base font-normal text-right">
+                    Oil and pigment on linen, 240 x 160cm
+                </p>
+            </div>
+            <!-- Stop the Chaos  -->
+            <div class="mt-12 w-3/4 flex flex-col items-end">
+                <img src="../assets/images/pictures/7. Stop the Chaos .jpg" alt="Stop the Chaos " class="w-full h-auto">
+                <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
+                    Stop the Chaos
+                </h3>
+                <p class="text-gray-700 text-base font-normal text-right">
+                    Oil and pigment on linen, 240 x 160cm
+                </p>
+            </div>
+            <!-- I dont want to go to school -->
+            <div class="mt-12 w-1/2 flex flex-col items-end">
+                <img src="../assets/images/pictures/8. I don't want to go to school.jpg"
+                    alt="I dont want to go to school" class="w-full h-auto">
+                <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
+                    I dont want to go to school
+                </h3>
+                <p class="text-gray-700 text-base font-normal text-right">
+                    Oil and pigment on linen, 240 x 160cm
+                </p>
+            </div>
+            <!-- Into space -->
+            <div class="mt-12 w-1/2 flex flex-col items-end">
+                <img src="../assets/images/pictures/9. Into Space.jpg" alt="Into Space" class="w-full h-auto">
+                <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
+                    Into Space
+                </h3>
+                <p class="text-gray-700 text-base font-normal text-right">
+                    Oil and pigment on linen, 240 x 160cm
+                </p>
+            </div>
+            <!-- No Title -->
+            <div class="mt-12 w-1/2 flex flex-col items-end">
+                <img src="../assets/images/pictures/10. no_title.jpg" alt="No Title" class="w-full h-auto">
+                <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
+                    No Title
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
                     Oil and pigment on linen, 240 x 160cm
@@ -75,4 +155,5 @@
     </div>
 
 </body>
+
 </html>
