index.html moved to root

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
   <!-- Navigation Links Container -->
   <nav class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-6 mt-8">
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
-      <a href="pictures.html" class="cursor-pointer">Pictures</a>
+      <a href="src/pictures.html" class="cursor-pointer">Pictures</a>
     </h3>
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
-      <a href="about.html" class="cursor-pointer">About</a>
+      <a href="src/about.html" class="cursor-pointer">About</a>
     </h3>
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
-      <a href="cv.html" class="cursor-pointer">CV</a>
+      <a href="src/cv.html" class="cursor-pointer">CV</a>
     </h3>
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
-      <a href="contact.html" class="cursor-pointer">Contact</a>
+      <a href="src/contact.html" class="cursor-pointer">Contact</a>
     </h3>
   </nav>
 
