--- a/src/cv.html
+++ b/src/cv.html
@@ -24,7 +24,7 @@
                  text-gray-800 
                  mb-8 
                  transition-transform duration-500 hover:scale-105">
-            <a href="index.html" class="text-gray-800 hover:text-gray-500 cursor-pointer transition-colors duration-300"
+            <a href="../index.html" class="text-gray-800 hover:text-gray-500 cursor-pointer transition-colors duration-300"
                 aria-label="Back to Home">
                 Sakura Hochegger
             </a>
