style ref updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <!-- Compiled Tailwind CSS -->
-  <link href="/build/styles.css" rel="stylesheet">
+  <link href="build/styles.css" rel="stylesheet">
 </head>
 
 <body class="bg-full-background bg-cover bg-center bg-no-repeat min-h-screen flex flex-col items-end p-8">
