edited picture sizez

--- a/src/pictures.html
+++ b/src/pictures.html
@@ -51,7 +51,7 @@
                     Childhood fear
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    Oil on linen, 40 x 30cm
                 </p>
             </div>
             <!-- Paintings on paper -->
@@ -74,7 +74,7 @@
                     No title
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    Oil and pigment on linen, 90 x 70cm
                 </p>
             </div>
             <!-- Favourite 3 -->
@@ -85,7 +85,7 @@
                     Favourite 3
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    Oil and pigment on linen, 150 x 110
                 </p>
             </div>
             <!-- OMG it's... -->
@@ -96,7 +96,7 @@
                     OMG it's...
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    Oil on canvas, 40 x 30
                 </p>
             </div>
             <!-- 3 of us -->
@@ -106,7 +106,7 @@
                     3 of us
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    Oil and pigment on linen, 90 x 70cm
                 </p>
             </div>
             <!-- Stop the Chaos  -->
@@ -116,7 +116,7 @@
                     Stop the Chaos
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    Pigment on canvas, 120 x 120cm
                 </p>
             </div>
             <!-- I dont want to go to school -->
@@ -127,7 +127,7 @@
                     I dont want to go to school
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    pigment on linen, 40 x 30cm
                 </p>
             </div>
             <!-- Into space -->
@@ -137,7 +137,7 @@
                     Into Space
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    Oil and pigment on linen, 80 x 60cm
                 </p>
             </div>
             <!-- No Title -->
@@ -147,7 +147,7 @@
                     No Title
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 240 x 160cm
+                    Oil and pigment on canvas, 140 x 90cm
                 </p>
             </div>
         </div>
