edit text in pictures

--- a/src/pictures.html
+++ b/src/pictures.html
@@ -85,7 +85,7 @@
                     Favourite 3
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil and pigment on linen, 150 x 110
+                    Oil and pigment on linen, 150 x 110cm
                 </p>
             </div>
             <!-- OMG it's... -->
@@ -96,7 +96,7 @@
                     OMG it's...
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    Oil on canvas, 40 x 30
+                    Oil on canvas, 40 x 30cm
                 </p>
             </div>
             <!-- 3 of us -->
@@ -119,7 +119,7 @@
                     Pigment on canvas, 120 x 120cm
                 </p>
             </div>
-            <!-- I dont want to go to school -->
+            <!-- I don't want to go to school -->
             <div class="mt-12 w-1/2 flex flex-col items-end">
                 <img src="../assets/images/pictures/8. I don't want to go to school.jpg"
                     alt="I dont want to go to school" class="w-full h-auto">
@@ -127,7 +127,7 @@
                     I dont want to go to school
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
-                    pigment on linen, 40 x 30cm
+                    Oil and pigment on linen, 40 x 30cm
                 </p>
             </div>
             <!-- Into space -->
