--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Navigation Links Container -->
   <nav class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-6 mt-8">
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
-      <a href="src/pictures.html" class="cursor-pointer">Pictures</a>
+      <a href="src/pictures.html" class="cursor-pointer">Paintings</a>
     </h3>
     <h3 class="font-heading text-xl sm:text-2xl text-white hover:text-gray-300 transition-colors duration-300">
       <a href="src/about.html" class="cursor-pointer">About</a>
