fixed image alignment in cv.html and image proportions in pictures.html

--- a/src/pictures.html
+++ b/src/pictures.html
@@ -12,8 +12,7 @@
     <!-- Compiled Tailwind CSS -->
     <link href="../build/styles.css" rel="stylesheet">
 </head>
-
-<body class="bg-white min-h-screen flex flex-col items-center p-8">
+<body class="bg-white min-h-screen flex flex-col items-center p-8"></body>
 
     <!-- Main Content Wrapper for Centering -->
     <div class="w-full max-w-5xl flex flex-col items-end">
@@ -33,7 +32,7 @@
         <!-- Images Section -->
         <div class="w-full flex flex-col items-center">
             <!-- Letting go, y and I -->
-            <div class="mt-12 w-3/4 flex flex-col items-end">
+            <div class="mt-12 sm:w-3/4 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/1. Sakura Hochegger 'Letting go, y and I'.jpg"
                     alt="Letting go, y and I" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
@@ -44,7 +43,7 @@
                 </p>
             </div>
             <!-- Childhood fear -->
-            <div class="mt-12 w-1/2 flex flex-col items-end">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/2. childhood_fear.jpg" alt="Childhood fear"
                     class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
@@ -55,7 +54,7 @@
                 </p>
             </div>
             <!-- Paintings on paper -->
-            <div class="mt-12 w-3/4 flex flex-col items-end">
+            <div class="mt-12 sm:w-4/5 w-3/4 flex flex-col items-end">
                 <img src="../assets/images/pictures/2. Sakura Hochegger 'Paintings on paper'.jpg"
                     alt="Paintings on paper" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
@@ -65,9 +64,8 @@
                     Oil and pigment on paper, various sizes
                 </p>
             </div>
-
             <!-- No title -->
-            <div class="mt-12 w-1/2 flex flex-col items-end">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/3. Sakura Hochegger 'No title'.jpg" alt="No title"
                     class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
@@ -78,7 +76,7 @@
                 </p>
             </div>
             <!-- Favourite 3 -->
-            <div class="mt-12 w-1/2 flex flex-col items-end">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/4. Sakura Hochegger 'Favourite 3'.jpg" alt="Favourite 3"
                     class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
@@ -89,7 +87,7 @@
                 </p>
             </div>
             <!-- OMG it's... -->
-            <div class="mt-12 w-1/2 flex flex-col items-end">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/5. Sakura Hochegger 'OMG it's...'.jpg" alt="OMG it's..."
                     class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
@@ -100,7 +98,7 @@
                 </p>
             </div>
             <!-- 3 of us -->
-            <div class="mt-12 w-1/2 flex flex-col items-end">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/6. 三 of us .jpg" alt="3 of us" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
                     3 of us
@@ -110,8 +108,8 @@
                 </p>
             </div>
             <!-- Stop the Chaos  -->
-            <div class="mt-12 w-3/4 flex flex-col items-end">
-                <img src="../assets/images/pictures/7. Stop the Chaos .jpg" alt="Stop the Chaos " class="w-full h-auto">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
+                <img src="../assets/images/pictures/7. Stop the Chaos .jpg" alt="Stop the Chaos" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
                     Stop the Chaos
                 </h3>
@@ -120,18 +118,18 @@
                 </p>
             </div>
             <!-- I don't want to go to school -->
-            <div class="mt-12 w-1/2 flex flex-col items-end">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/8. I don't want to go to school.jpg"
-                    alt="I dont want to go to school" class="w-full h-auto">
+                    alt="I don't want to go to school" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
-                    I dont want to go to school
+                    I don't want to go to school
                 </h3>
                 <p class="text-gray-700 text-base font-normal text-right">
                     Oil and pigment on linen, 40 x 30cm
                 </p>
             </div>
             <!-- Into space -->
-            <div class="mt-12 w-1/2 flex flex-col items-end">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/9. Into Space.jpg" alt="Into Space" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
                     Into Space
@@ -141,7 +139,7 @@
                 </p>
             </div>
             <!-- No Title -->
-            <div class="mt-12 w-1/2 flex flex-col items-end">
+            <div class="mt-12 sm:w-1/2 w-4/5 flex flex-col items-end">
                 <img src="../assets/images/pictures/10. no_title.jpg" alt="No Title" class="w-full h-auto">
                 <h3 class="mt-2 text-gray-700 text-base font-normal text-right">
                     No Title
