--- a/src/cv.html
+++ b/src/cv.html
@@ -14,28 +14,26 @@
 </head>
 
 <body class="bg-white min-h-screen flex flex-col items-center p-8">
+ <!-- Main Content Wrapper for Centering -->
+<div class="w-full max-w-5xl flex flex-col relative">
 
-    <!-- Main Content Wrapper for Centering -->
-    <div class="w-full max-w-5xl flex flex-col items-end relative">
+    <!-- Main Heading (Back Link) -->
+    <h1 class="font-heading font-bold 
+               text-3xl sm:text-4xl md:text-5xl lg:text-6xl 
+               text-gray-800 
+               mb-8 
+               transition-transform duration-500 hover:scale-105">
+        <a href="../index.html" class="text-gray-800 hover:text-gray-500 cursor-pointer transition-colors duration-300"
+            aria-label="Back to Home">
+            Sakura Hochegger
+        </a>
+    </h1>
 
-        <!-- Main Heading (Back Link) -->
-        <h1 class="font-heading font-bold 
-                 text-3xl sm:text-4xl md:text-5xl lg:text-6xl 
-                 text-gray-800 
-                 mb-8 
-                 transition-transform duration-500 hover:scale-105">
-            <a href="../index.html" class="text-gray-800 hover:text-gray-500 cursor-pointer transition-colors duration-300"
-                aria-label="Back to Home">
-                Sakura Hochegger
-            </a>
-        </h1>
-
-        <!-- Artist Image (Positioned on the Right) -->
-        <img src="../assets/images/personal/IMG_5653.jpeg" alt="Artist Portrait"
-             class="absolute top-24 right-0 w-32 h-auto rounded-lg shadow-md">
+    <!-- Flex Container for CV Content and Image -->
+    <div class="flex flex-col-reverse sm:flex-row w-full mt-12 items-start">
 
         <!-- CV Content -->
-        <div class="w-3/4 mt-12 text-gray-800 text-base font-normal leading-relaxed">
+        <div class="w-full sm:w-3/4 text-gray-800 text-base font-normal leading-relaxed">
             <!-- Personal Information -->
             <section class="mb-8">
                 <p><strong>Born:</strong> Kyoto, Japan</p>
@@ -62,10 +60,16 @@
                     <li><strong>128 Exhibition</strong> - University of Brighton, 2017</li>
                 </ul>
             </section>
+        </div>
 
+        <!-- Artist Image Wrapped in a Div -->
+        <div class="flex-shrink-0 self-start mb-6 sm:mb-0 sm:ml-6">
+            <img src="../assets/images/personal/IMG_5653.jpeg" alt="Artist Portrait"
+                 class="w-32 h-auto rounded-lg shadow-md">
         </div>
 
     </div>
-
+</div>
 </body>
+
 </html>
